[project]
name = "mcp-pdb"
version = "0.1.0"
description = "MCP to use the python debugger, inspired by debug-gym"
readme = "README.md"
authors = [
    { name = "samefarrar", email = "67292186+samefarrar@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["mcp[cli]>=1.6.0"]

[project.scripts]
mcp-pdb = "mcp_pdb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
