[project]
name = "mcp-pdb"
version = "0.4.0"
description = "MCP to use the python debugger, inspired by debug-gym"
readme = "README.md"
authors = [
    { name = "samefarrar", email = "67292186+samefarrar@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.6.0"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mcp-pdb = "mcp_pdb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
